--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/Localization/SettingUi/en.json
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/Localization/SettingUi/en.json
@@ -12,6 +12,7 @@
     "Mail": "Mail",
     "Smtp": "SMTP",
     "Others": "Others",
-    "Permission:SettingUi": "Setting UI"
+    "Permission:SettingUi": "Setting UI",
+    "Permission:SettingUi.Global": "Global"
   }
 }
