ShowSettingPage permission added.

--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/Localization/SettingUi/en.json
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/Localization/SettingUi/en.json
@@ -15,7 +15,7 @@
     "TimeZone": "TimeZone",
     "Others": "Others",
     "Permission:SettingUi": "Setting UI",
-    "Permission:SettingUi.Tenant": "Tenant",
+    "Permission:SettingUi.ShowSettingPage": "Show Setting Page",
     "Save": "Save",
     "Reset": "Reset",
     "SuccessfullySaved": "Successfully saved",
