--- a/src/EasyAbp.Abp.SettingUi.Domain.Shared/Localization/SettingUi/zh-Hans.json
+++ b/src/EasyAbp.Abp.SettingUi.Domain.Shared/Localization/SettingUi/zh-Hans.json
@@ -15,7 +15,10 @@
     "TimeZone": "时区",
     "Others": "其它",
     "Permission:SettingUi": "设置UI",
-    "Permission:SettingUi.ShowSettingPage": "显示设定页面",
+    "Permission:SettingUi.ShowSettingPage": "显示设置页面",
+    "Permission:SettingUi.Tenant": "租户设置",
+    "Permission:SettingUi.User": "用户设置",
+    "Permission:SettingUi.Host": "宿主设置",
     "Save": "保存",
     "Reset": "重置",
     "SuccessfullySaved": "保存成功",
